Fix gold status not properly obtained because the script containing the info is deleted before it is read.
Fix Firefox not showing he See Details icon when using dark mode.

--- a/resource/css/icon.css
+++ b/resource/css/icon.css
@@ -400,10 +400,6 @@ div[role="navigation"] > ul > li {
 }
 
 @media (prefers-color-scheme: dark) {
-	.vh-icon-question {
-		filter: invert(1);
-	}
-
 	.vh-icon-request {
 		filter: invert(1);
 	}
